--- a/catroid/build.gradle
+++ b/catroid/build.gradle
@@ -52,6 +52,7 @@ android {
     packagingOptions {
         exclude 'META-INF/maven/com.google.guava/guava/pom.properties'
         exclude 'META-INF/maven/com.google.guava/guava/pom.xml'
+        exclude 'META-INF/INDEX.LIST'  //compile problem with parrot arsdk
     }
     buildTypes {
 
@@ -107,7 +108,6 @@ android {
         }
     }
     packagingOptions {
-        exclude 'META-INF/INDEX.LIST'  //compile problem with parrot arsdk
     }
 }
 
@@ -122,7 +122,8 @@ configurations {
 }
 
 dependencies {
-    compile 'com.parrot:arsdk:3.9.2'
+    compile 'com.parrot:arsdk:3.12.6'
+    compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.google.guava:guava:19.0'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.google.code.gson:gson:2.7'
